src/containers/chat/index.css
.add-button {
	height: 54px;
	width: 54px;
	background-color: #D8D8D8;
	border: none;
	border-radius: 100px;
}
.chat-container{
	height: 80%;
	padding: 20px;
	padding-top: 0px;
	position: absolute;
	bottom: 0;
	left: 0;
	margin-bottom: 12%;
}
.input-container{
	padding: 10px;
}
.input-space {
	margin-left: -5px;
	margin-top: 5px;	
}
.line {
	box-sizing: border-box;
	height: 2.28px;
	width: 18px;
	border: 3px solid #979797;
}
.line-copy {
	box-sizing: border-box;
	height: 2.28px;
	width: 18px;
	border: 3px solid #979797;
	transform: rotate(90deg);
}
.message-container {
	padding: 10px;
	padding-top: 0px;
	background-color: white;
	height: 100%;
	overflow: auto;
}
.message-input {
    height: 43px;	
    width: 96%;
	border-radius: 24px;
	background-color: #EFF2F3;
	margin-left: -5px;
	margin-top: 15px;
	border: none;
	padding-left: 15px;
	font-size: 17px;
}
.plus_sign {
	font-size: 50px;
	font-weight: 100;
	margin: auto;
	color: #979797;
	height: 10px;
}

